--- a/changelog
+++ b/changelog
@@ -1,4 +1,16 @@
-commit 7445ce4b901f6ca979f55f79c623a3677085d9a0 (HEAD -> main, origin/main, origin/HEAD)
+commit 931af73a0bd58cc0bb0917045b0dd37744c4732c (HEAD -> main, origin/main, origin/HEAD)
+Author: Jesus Palencia <sinfallas@gmail.com>
+Date:   Thu Apr 18 21:57:24 2024 -0400
+
+    * update
+
+commit 7a4e3de5758ebd13f4befc7379e0477973804cf7
+Author: Jesus Palencia <sinfallas@gmail.com>
+Date:   Wed Apr 17 18:03:30 2024 -0400
+
+    * changelog
+
+commit 7445ce4b901f6ca979f55f79c623a3677085d9a0
 Author: Jesus Palencia <sinfallas@gmail.com>
 Date:   Wed Apr 17 18:03:13 2024 -0400
 
