--- a/changelog
+++ b/changelog
@@ -1,4 +1,34 @@
-commit 931af73a0bd58cc0bb0917045b0dd37744c4732c (HEAD -> main, origin/main, origin/HEAD)
+commit bffc158b9d5c46dd91dd4a5618c689efa183251f (HEAD -> main, origin/main, origin/HEAD)
+Author: Jesus Palencia <sinfallas@gmail.com>
+Date:   Sun Apr 28 23:14:12 2024 -0400
+
+    * para publicacion
+
+commit 5ee5a9e50ed3db081421039eb993650a7ede2949
+Author: Jesus Palencia <sinfallas@gmail.com>
+Date:   Wed Apr 24 11:20:06 2024 -0400
+
+    Update Dockerfile
+
+commit 8039329a3f278243ff75cef3023b649ec7cc2066
+Author: Jesus Palencia <sinfallas@gmail.com>
+Date:   Wed Apr 24 10:47:23 2024 -0400
+
+    Update Dockerfile
+
+commit c536fa160b729d9355a396c3c302b3eeb6e10889
+Author: Jesus Palencia <sinfallas@gmail.com>
+Date:   Wed Apr 24 10:29:14 2024 -0400
+
+    Update Dockerfile
+
+commit 87ecab7fc05aec445df7844c9f5861aa914abb30
+Author: Jesus Palencia <sinfallas@gmail.com>
+Date:   Thu Apr 18 21:57:31 2024 -0400
+
+    * changelog
+
+commit 931af73a0bd58cc0bb0917045b0dd37744c4732c
 Author: Jesus Palencia <sinfallas@gmail.com>
 Date:   Thu Apr 18 21:57:24 2024 -0400
 
